--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </form>
       
       <div>
-        <div class="icon-city-box">
+        <div class="icon-box">
           <img id="icon"/>
         </div>
         <div id="city">Sistrans</div>
