added fadeIn animation for inserted html

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       
       <div>
         <div class="icon-box">
-          <img id="icon"/>
+          <img id="icon" class="icon"/>
         </div>
-        <div id="city">Sistrans</div>
+        <div id="city" class="city">Sistrans</div>
       </div>
 
       <div class="weather-desc-box">
-        <div class="weather-desc" id="weatherDesc">Seems to be pending...</div>
+        <div id="weatherDesc" class="weather-desc">Seems to be pending...</div>
       </div>
       
       <div class="circle">
-        <div id="temp">12°C</div>
+        <div id="temp" class="temp">12°C</div>
       </div>
 
       <div class="info-container">
