--- a/index.html
+++ b/index.html
@@ -31,46 +31,30 @@
       
       <div>
         <div class="icon-box">
-          <img id="icon" class="icon"/>
+          <img id="icon" class="icon toAnimate"/>
         </div>
-        <div id="city" class="city">Sistrans</div>
+        <div id="city" class="city toAnimate">Sistrans</div>
       </div>
 
       <div class="weather-desc-box">
-        <div id="weatherDesc" class="weather-desc">Seems to be pending...</div>
+        <div id="weatherDesc" class="weather-desc toAnimate">Seems to be pending...</div>
       </div>
       
       <div class="circle">
-        <div id="temp" class="temp">12°C</div>
+        <div id="temp" class="temp toAnimate">12°C</div>
       </div>
 
       <div class="info-container">
-        <div class="info-box"><div class="info-content" id="humidity"><i class="wi wi-humidity"></i> 74 %</div></div>
-        <div class="info-box"><div class="info-content" id="windSpeed"><i class="wi wi-small-craft-advisory"></i> 74 %</div></div>
-        <div class="info-box"><div class="info-content" id="pressure"><i class="wi wi-barometer"></i> 74 %</div></div>
-        <div class="info-box"><div class="info-content" id="windDeg"><i class="wi wi-wind-direction"></i> 74 %</div></div>
+        <div class="info-box"><div class="info-content toAnimate" id="humidity"><i class="wi wi-humidity"></i> 74 %</div></div>
+        <div class="info-box"><div class="info-content toAnimate" id="windSpeed"><i class="wi wi-small-craft-advisory"></i> 74 %</div></div>
+        <div class="info-box"><div class="info-content toAnimate" id="pressure"><i class="wi wi-barometer"></i> 74 %</div></div>
+        <div class="info-box"><div class="info-content toAnimate" id="windDeg"><i class="wi wi-wind-direction"></i> 74 %</div></div>
       </div>
 
     </div>
 
     <div>5-day-forecast</div>
-    <div class="forecast-container">
-      <div class="forecast-box empty">
-        <img src="">
-      </div>
-      <div class="forecast-box empty">
-        <img src="">
-      </div>
-      <div class="forecast-box empty">
-        <img src="">
-      </div>
-      <div class="forecast-box empty">
-        <img src="">
-      </div>
-      <div class="forecast-box empty">
-        <img src="">
-      </div>
-    </div>
+    <div class="forecast-container"></div>
 
     <div class="bottom">
       <input id="celsius" type="radio" name="celToFahr" value="celsius" checked><label><i class="wi wi-celsius"></i> </label>
